changement paddin-bottom sur la page countryfr

--- a/countryfr.html
+++ b/countryfr.html
@@ -36,25 +36,25 @@
     <!-- Add your site or application content here -->
 
     <div class="countrycover">
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Yes Tour Africa</a>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Yes Tour Africa</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="countryfr.html">PAYS</a></li>
+                    <li><a href="#">PORTRAITS</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li><a href="#">HOME</a></li>
-                <li><a href="countryfr.html">PAYS</a></li>
-                <li><a href="#">PORTRAITS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </div>
-    </nav>
-    <h1>Pour chaque pays étudié, retrouvez les ressources suivantes :</h1>
+        </nav>
+        <h1>Pour chaque pays étudié, retrouvez les ressources suivantes :</h1>
 
 
         <!-- <img src="img/southafrica.jpg" alt="" height="100%" width="100%"/> -->
-      </div>
+    </div>
 
     <div class="countryfr">
         <div class="row">
@@ -107,45 +107,50 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                  <h2>
+                    <h2>
                     Pays anglophone
                   </h2>
-                  <div class="col-md-6">
-                    <a href="#">Nigéria</a>
-                  </div>
-                  <div class="col-md-6">
-                    <a href="#">kenya</a>
-                  </div>
-                  <div class="col-md-6">
-                    <a href="#">Tanzanie</a>
-                  </div>
-                  <div class="col-md-6">
-                    <a href="#">Rwanda</a>
-                  </div>
-                  <div class="col-md-6">
-                    <a href="#">Ouganda</a>
-                  </div>
-                  <div class="col-md-6">
-                    <a href="#">Afrique du Sud</a>
-                  </div>
-                  <div class="col-md-6">
+                    <div class="col-md-6">
+                        <a href="#">Nigéria</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">kenya</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Tanzanie</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Rwanda</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Ouganda</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Afrique du Sud</a>
+                    </div>
+                    <div class="col-md-6">
 
-                  </div>
-                  <div class="col-md-6">
+                    </div>
+                    <div class="col-md-6">
 
-                  </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <footer>
-        <a href="" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-youtube-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-vimeo-square fa-4x"></i></a>
-        <a href="mailto:yestourafrica@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
+        <div class="row">
+            <div class="container">
+                <div class="col-md-6">
+
+                </div>
+                <div class="col-md-6">
+                    <a href="https://twitter.com/yestourafrica" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
+                    <a href="" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
+                </div>
+            </div>
         </div>
 
         <p>
