--- a/homefr.html
+++ b/homefr.html
@@ -136,10 +136,14 @@
         <img class="portrait" src="img/Hachemi.png" alt="El-Hachemi Harizi" />
         <h3>Sandrine NAGUERTIGA</h3>
         <p>Porteur de Projet</p>
-        <!-- <a href="">
-                    <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" /></a> -->
-        <a href="https://twitter.com/HachemiHarizi">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <i class="fa fa-facebook-square fa-3x"></i>
+        </a>
+        <a href="">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560">
+        <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
 
@@ -148,11 +152,14 @@
         <img class="portrait" src="img/n3xt.png" alt="Bertand Dupont" />
         <h3>Justine MOURTADHOI</h3>
         <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/dupont.bertrand.profil?fref=ts">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
+        <a href="https://www.facebook.com/mary269">
+          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/Ber_n3xt">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+        <a href="https://twitter.com/MaryJustineMtdh">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
 
@@ -161,26 +168,46 @@
         <img class="portrait" src="img/master-san.png" alt="Antoine Soorbeek" />
         <h3>Auriane Goullard</h3>
         <p>Conseil e-business</p>
-        <a href="https://www.facebook.com/antoine.soorbeek?fref=ts">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
+        <a href="https://www.facebook.com/auriane.goullard">
+          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <!-- <a href="">
-                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.pngg" alt="Icone Twitter" />
-                    </a> -->
+        <a href="">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="https://fr.linkedin.com/in/auriane-goullard-b2457095">
+        <i class="fa fa-linkedin-square fa-3x"></i>
+        </a>
       </div>
 
-
-
-      <!-- François -->
+                  <!-- Angela -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/fan-base.png" alt="François Deféver" />
-        <h3>François Deféver</h3>
-        <p>Développeur Junior</p>
-        <a href="https://www.facebook.com/Francois.Fan.Defever">
-          <i class="fa fa-facebook-square fa-2x"></i>
+        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
+        <h3>Angela NKD</h3>
+        <p>Traductrice</p>
+        <a href="">
+          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/FD_NPC">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+        <a href="">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="">
+        <i class="fa fa-linkedin-square fa-3x"></i>
+        </a>
+      </div>
+
+            <!-- Nassera -->
+      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
+        <h3>Nassera SAKAI</h3>
+        <p>Traductrice</p>
+        <a href="">
+          <i class="fa fa-facebook-square fa-3x"></i>
+        </a>
+        <a href="">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="">
+        <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
 
@@ -189,29 +216,31 @@
         <img class="portrait" src="img/akvince.png" alt="Vincent Deflandre" />
         <h3>Vincent Deflandre</h3>
         <p>Développeur Junior</p>
-        <a href="https://twitter.com/kiravince">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+        <a href="https://www.facebook.com/vincent.deflandre">
+         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <ul class="list-inline intro-social-buttons">
-          <li>
-            <p><a class="button skillcode" href="https://github.com/akvince" role="button">GitHub &raquo;</a></p>
-          </li>
-        </ul>
+        <a href="https://twitter.com/kiravince">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="https://fr.linkedin.com/in/deflandre-vincent-57a050118/fr">
+        <i class="fa fa-linkedin-square fa-3x"></i>
+        </a>
       </div>
 
-      <!-- Anas -->
+            <!-- François -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
-        <h3>Anas Khtib</h3>
+        <img class="portrait" src="img/fan-base.png" alt="François Deféver" />
+        <h3>François Deféver</h3>
         <p>Développeur Junior</p>
-        <a href="https://twitter.com/Anas_khtib">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+        <a href="https://www.facebook.com/Francois.Fan.Defever">
+          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <ul class="list-inline intro-social-buttons">
-          <li>
-            <p><a class="button skillcode" href="https://github.com/Anas-k" role="button">GitHub &raquo;</a></p>
-          </li>
-        </ul>
+        <a href="https://twitter.com/FD_NDPC">
+        <i class="fa fa-twitter-square fa-3x"></i></i>
+        </a>
+        <a href="https://fr.linkedin.com/in/francoisdefever">
+        <i class="fa fa-linkedin-square fa-3x"></i>
+        </a>
       </div>
     </div>
     <!-- /Contributors Panel -->
