--- a/countryfr.html
+++ b/countryfr.html
@@ -143,7 +143,19 @@
         <div class="row">
             <div class="container">
                 <div class="col-md-6">
-
+                    <a class="twitter-timeline" href="https://twitter.com/yestourafrica" data-widget-id="711238877810450433">Tweets de @yestourafrica</a>
+                    <script>
+                        ! function(d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0],
+                                p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + "://platform.twitter.com/widgets.js";
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, "script", "twitter-wjs");
+                    </script>
                 </div>
                 <div class="col-md-6">
                     <a href="https://twitter.com/yestourafrica" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
