add link social network footer page countryfr

--- a/countryfr.html
+++ b/countryfr.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="col-md-6">
                     <a href="https://twitter.com/yestourafrica" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
-                    <a href="" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
-                    <a href="" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
+                    <a href="https://www.facebook.com/YES-Tour-In-Indian-Ocean-640757062735725/" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
+                    <a href="https://www.instagram.com/yestour_africa/" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
                 </div>
             </div>
         </div>
