--- a/countryfr.html
+++ b/countryfr.html
@@ -42,7 +42,7 @@
                     <a class="navbar-brand" href="#">Yes Tour Africa</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="homefr.html">HOME</a></li>
                     <li><a href="countryfr.html">PAYS</a></li>
                     <li><a href="#">PORTRAITS</a></li>
                     <li><a href="#">BLOG</a></li>
