add new footer from vince branch

--- a/homefr.html
+++ b/homefr.html
@@ -256,13 +256,30 @@
 
     </div>
 
-    <footer>
-        <a href="" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-youtube-square fa-4x"></i></a>
-        <a href="" target="_blank"><i class="fa fa-vimeo-square fa-4x"></i></a>
-        <a href="mailto:yestourafrica@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
+<footer>
+        <div class="row">
+            <div class="container">
+                <div class="col-md-6">
+                    <a class="twitter-timeline" href="https://twitter.com/yestourafrica" data-widget-id="711238877810450433">Tweets de @yestourafrica</a>
+                    <script>
+                        ! function(d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0],
+                                p = /^http:/.test(d.location) ? 'http' : 'https';
+                            if (!d.getElementById(id)) {
+                                js = d.createElement(s);
+                                js.id = id;
+                                js.src = p + "://platform.twitter.com/widgets.js";
+                                fjs.parentNode.insertBefore(js, fjs);
+                            }
+                        }(document, "script", "twitter-wjs");
+                    </script>
+                </div>
+                <div class="col-md-6">
+                    <a href="https://twitter.com/yestourafrica" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
+                    <a href="https://www.facebook.com/YES-Tour-In-Indian-Ocean-640757062735725/" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
+                    <a href="https://www.instagram.com/yestour_africa/" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
+                </div>
+            </div>
         </div>
 
         <p>
