add bootslide pictures homefr | not good

--- a/homefr.html
+++ b/homefr.html
@@ -63,7 +63,7 @@
                     <div class="col-xs-12 col-lg-12" id="slider_full_items">
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
+                            <div class="img_large" style="background-image:url(img/market-280134_960_720.jpg);">
                                 <p class="text-center">
                                     <span>Slider Text</span>
                                     <span class="slider_full_desc">Your Description</span>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
+                            <div class="img_large" style="background-image:url(img/southafrica.jpg);">
                                 <p class="text-center">
                                     <span>Slider Text</span>
                                     <span class="slider_full_desc">Your Description</span>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
+                            <div class="img_large" style="background-image:url(img/solar-panel-241903_960_720.jpg);">
                                 <p class="text-center">
                                     <span>Slider Text</span>
                                     <span class="slider_full_desc">Your Description</span>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
+                            <div class="img_large" style="background-image:url('');">
                                 <p class="text-center">
                                     <span>Slider Text</span>
                                     <span class="slider_full_desc">Your Description</span>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
+                            <div class="img_large" style="background-image:url('');">
                                 <p class="text-center">
                                     <span>Slider Text</span>
                                     <span class="slider_full_desc">Your Description</span>
@@ -250,10 +250,6 @@
 
     <div class="mapgoogle">
         <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
-    </div>
-
-    <div class="team">
-
     </div>
 
 <footer>
