mise en place des pages pays

--- a/countryfr.html
+++ b/countryfr.html
@@ -114,13 +114,13 @@
                         <a href="#">Nigéria</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="kenyafr.html">kenya</a>
+                        <a href="country/fr/kenyafr.html">kenya</a>
                     </div>
                     <div class="col-md-6">
                         <a href="#">Tanzanie</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="rwandafr.html">Rwanda</a>
+                        <a href="country/rwandafr.html">Rwanda</a>
                     </div>
                     <div class="col-md-6">
                         <a href="#">Ouganda</a>
