--- a/country/fr/madagascarfr.html
+++ b/country/fr/madagascarfr.html
@@ -41,8 +41,8 @@
                 <a class="navbar-brand" href="#">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="homefr.html">HOME</a></li>
-                <li><a href="countryfr.html">PAYS</a></li>
+                <li><a href="../../homefr.html">HOME</a></li>
+                <li><a href="../../countryfr.html">PAYS</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
