--- a/country/fr/reunionfr.html
+++ b/country/fr/reunionfr.html
@@ -18,14 +18,13 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../../css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script type="text/javascript" src="../js/boot_slider.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/boot_slider.css" />
-    <link rel="stylesheet" href="../css/main.css">
-    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
+    <script type="text/javascript" src="../../js/boot_slider.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/boot_slider.css" />
+    <link rel="stylesheet" href="../../css/main.css">
 </head>
 
 <body>
