redirec of the countryfr

--- a/countryfr.html
+++ b/countryfr.html
@@ -64,46 +64,46 @@
                         Pays francophone
                       </h2>
                     <div class="col-md-6">
-                        <a href="#">Senegal</a>
+                        <a href="country/fr/senegalfr.html">Senegal</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Côte d'Ivoire</a>
+                        <a href="country/fr/cotedivoirefr.html">Côte d'Ivoire</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Comores</a>
+                        <a href="country/fr/comoresfr.html">Comores</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Madagascar</a>
+                        <a href="country/fr/madagascarfr.html">Madagascar</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="reunionfr.html">Réunion</a>
+                        <a href="country/fr/reunionfr.html">Réunion</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Ile Maurice</a>
+                        <a href="country/fr/ilemauricefr.html">Ile Maurice</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Tchad</a>
+                        <a href="country/fr/tchadfr.html">Tchad</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Gabon</a>
+                        <a href="country/fr/gabonfr.html">Gabon</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Mali</a>
+                        <a href="country/fr/malifr.html">Mali</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Mauritanie</a>
+                        <a href="country/fr/mauritaniefr.html">Mauritanie</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Burkina-Faso</a>
+                        <a href="country/fr/burkinafasofr.html">Burkina-Faso</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Cameroun</a>
+                        <a href="country/fr/camerounfr.html">Cameroun</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Centrafrique</a>
+                        <a href="country/fr/centreafriquefr.html">Centrafrique</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Benin</a>
+                        <a href="country/fr/beninfr.html">Benin</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -111,22 +111,22 @@
                     Pays anglophone
                   </h2>
                     <div class="col-md-6">
-                        <a href="#">Nigéria</a>
+                        <a href="country/fr/nigeriafr.html">Nigéria</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/fr/kenyafr.html">kenya</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Tanzanie</a>
+                        <a href="country/fr/tanzaniefr.html">Tanzanie</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/rwandafr.html">Rwanda</a>
+                        <a href="country/fr/rwandafr.html">Rwanda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Ouganda</a>
+                        <a href="country/fr/ougandafr.html">Ouganda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="#">Afrique du Sud</a>
+                        <a href="country/fr/afriquedusudfr.html">Afrique du Sud</a>
                     </div>
                     <div class="col-md-6">
 
