finishing team section with photos

--- a/homefr.html
+++ b/homefr.html
@@ -113,7 +113,8 @@
     </div>
 
     <div class="projet">
-        <p class="project">
+        <h2>LE PROJET</h2>
+        <p>
             LE PROJET
 
         </p>
@@ -122,18 +123,19 @@
         <div class="jumbotron">
             <div class="container">
                 <h2>Team YES TOUR AFRICA</h2>
-                <p>Retrouvez ici la page des contributeurs de l'aventure YESTourAfrica. </p>
+                <p>Retrouvez ici les contributeurs de l'aventure YES Tour Africa. </p>
             </div>
         </div>
+    </div>
 
-        <div class="container">
+<div class="container">
             <!-- Contributors Panel -->
             <!-- First Line Contributors -->
-            <div class="row">
+    <div class="row">
 
             <!-- Sandrine -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/Hachemi.png" alt="El-Hachemi Harizi" />
+        <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
         <p>Porteur de Projet</p>
         <a href="https://www.facebook.com/sandrine.naguertiga">
@@ -149,7 +151,7 @@
 
             <!-- Justine -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/n3xt.png" alt="Bertand Dupont" />
+        <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
         <p>Porteur de Projet</p>
         <a href="https://www.facebook.com/mary269">
@@ -165,7 +167,7 @@
 
             <!-- Angela -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
+        <img class="portrait" src="img/teampict/unknown.jpg" alt="Angela NKD" />
         <h3>Angela NKD</h3>
         <p>Traductrice</p>
         <a href="">
@@ -178,10 +180,10 @@
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
-
+        <div class="clearfix"></div>
             <!-- Auriane -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/master-san.png" alt="Antoine Soorbeek" />
+        <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
         <h3>Auriane Goullard</h3>
         <p>Conseil e-business</p>
         <a href="https://www.facebook.com/auriane.goullard">
@@ -197,7 +199,7 @@
 
             <!-- Nassera -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
+        <img class="portrait" src="img/teampict/unknown.jpg" alt="Nassera SAKAI" />
         <h3>Nassera SAKAI</h3>
         <p>Traductrice</p>
         <a href="">
@@ -213,7 +215,7 @@
 
             <!-- Vincent -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/akvince.png" alt="Vincent Deflandre" />
+        <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
         <h3>Vincent Deflandre</h3>
         <p>Développeur Junior</p>
         <a href="https://www.facebook.com/vincent.deflandre">
@@ -229,7 +231,7 @@
 
             <!-- François -->
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/fan-base.png" alt="François Deféver" />
+        <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
         <h3>François Deféver</h3>
         <p>Développeur Junior</p>
         <a href="https://www.facebook.com/Francois.Fan.Defever">
@@ -241,12 +243,11 @@
         <a href="https://fr.linkedin.com/in/francoisdefever">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
-      </div>
     </div>
     <!-- /Contributors Panel -->
   </div>
   <!-- /container -->
-    </div>
+</div>
 
     <div class="mapgoogle">
         <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
