--- a/homefr.html
+++ b/homefr.html
@@ -63,10 +63,37 @@
                     <div class="col-xs-12 col-lg-12" id="slider_full_items">
                         <div class="col-xs-12 col-lg-12 slider_full_item">
                             <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url(img/market-280134_960_720.jpg);">
+                            <div class="img_large" style="background-image:url(img/ads.jpg);">
                                 <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
+                                    <span>YES Tour Africa</span>
+                                    <span class="slider_full_desc">Pour Entreprendre Ailleurs</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url(img/gabon.jpg);">
+                                <p class="text-center">
+                                    <span>YES Tour Africa</span>
+                                    <span class="slider_full_desc">Pour Entreprendre Ailleurs</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url(img/mosque.jpg);">
+                                <p class="text-center">
+                                    <span>YES Tour Africa</span>
+                                    <span class="slider_full_desc">Pour Entreprendre Ailleurs</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url(img/senegal.jpg);">
+                                <p class="text-center">
+                                    <span>YES Tour Africa</span>
+                                    <span class="slider_full_desc">Pour Entreprendre Ailleurs</span>
                                 </p>
                             </div>
                         </div>
@@ -74,35 +101,8 @@
                             <div class="opacity"></div>
                             <div class="img_large" style="background-image:url(img/southafrica.jpg);">
                                 <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url(img/solar-panel-241903_960_720.jpg);">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
+                                    <span>YES Tour Africa</span>
+                                    <span class="slider_full_desc">Pour Entreprendre Ailleurs</span>
                                 </p>
                             </div>
                         </div>
@@ -112,12 +112,14 @@
         </div>
     </div>
 
-    <div class="projet">
+    <div class="jumbotron text-justify">
+         <div class="container">
         <h2>LE PROJET</h2>
         <p>
-            LE PROJET
-
+            Je suis partie du constat que l’Afrique à la population la plus jeune du monde et que cette tendance va probablement s’accroitre dans les prochaines années. D’un autre côté, le continent fait face à de nombreux challenges sociaux-­‐économiques. Or, des solutions pereines et viables existent. Elles sont portées par des personnes que l’on appelle des enrepreneurs sociaux. Je pars alors en Octobre 2015 à la rencontre d’une vingtaine d’entrepreneurs. J’explore 8 pays (Comores, Madagascar, Kenya, Rwanda, Tanzanie, Ouganda, Iles de la Réunion et Maurice,) en 10 semaines dans le but d’identifier leurs besoins et trouver des solutions viables et efficaces à long terme.
         </p>
+    </div>
+    </div>
 
         <!-- jumbotron -->
         <div class="jumbotron">
