--- a/countryen.html
+++ b/countryen.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -42,8 +42,8 @@
                     <a class="navbar-brand" href="#">Yes Tour Africa</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li><a href="homefr.html">HOME</a></li>
-                    <li><a href="countryfr.html">PAYS</a></li>
+                    <li><a href="homeen.html">HOME</a></li>
+                    <li><a href="countryen.html">PAYS</a></li>
                     <li><a href="#">PORTRAITS</a></li>
                     <li><a href="#">BLOG</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -64,46 +64,46 @@
                         Pays francophone
                       </h2>
                     <div class="col-md-6">
-                        <a href="country/fr/senegalfr.html">Senegal</a>
+                        <a href="country/en/senegalen.html">Senegal</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/cotedivoirefr.html">Côte d'Ivoire</a>
+                        <a href="country/en/cotedivoireen.html">Côte d'Ivoire</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/comoresfr.html">Comores</a>
+                        <a href="country/en/comoresen.html">Comores</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/madagascarfr.html">Madagascar</a>
+                        <a href="country/en/madagascaren.html">Madagascar</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/reunionfr.html">Réunion</a>
+                        <a href="country/en/reunionen.html">Réunion</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/ilemauricefr.html">Ile Maurice</a>
+                        <a href="country/en/ilemauriceen.html">Ile Maurice</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/tchadfr.html">Tchad</a>
+                        <a href="country/en/tchaden.html">Tchad</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/gabonfr.html">Gabon</a>
+                        <a href="country/en/gabonen.html">Gabon</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/malifr.html">Mali</a>
+                        <a href="country/en/malien.html">Mali</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/mauritaniefr.html">Mauritanie</a>
+                        <a href="country/en/mauritanieen.html">Mauritanie</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/burkinafasofr.html">Burkina-Faso</a>
+                        <a href="country/en/burkinafasoen.html">Burkina-Faso</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/camerounfr.html">Cameroun</a>
+                        <a href="country/en/camerounen.html">Cameroun</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/centreafriquefr.html">Centrafrique</a>
+                        <a href="country/en/centreafriqueen.html">Centrafrique</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/beninfr.html">Benin</a>
+                        <a href="country/en/beninen.html">Benin</a>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -111,22 +111,22 @@
                     Pays anglophone
                   </h2>
                     <div class="col-md-6">
-                        <a href="country/fr/nigeriafr.html">Nigéria</a>
+                        <a href="country/en/nigeriaen.html">Nigéria</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/kenyafr.html">kenya</a>
+                        <a href="country/en/kenyaen.html">kenya</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/tanzaniefr.html">Tanzanie</a>
+                        <a href="country/en/tanzanieen.html">Tanzanie</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/rwandafr.html">Rwanda</a>
+                        <a href="country/en/rwandaen.html">Rwanda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/ougandafr.html">Ouganda</a>
+                        <a href="country/en/ougandaen.html">Ouganda</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/afriquedusudfr.html">Afrique du Sud</a>
+                        <a href="country/en/afriquedusuden.html">Afrique du Sud</a>
                     </div>
                     <div class="col-md-6">
 
