--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                       <h2>
                         choose your language
                       </h2>
-                        <a href=""><img src="img/drag/gb.png" alt="" height="280px" width="470px" /></a>
+                        <a href="homeen.html"><img src="img/drag/gb.png" alt="" height="280px" width="470px" /></a>
                     </div>
                     <div class="col-md-6">
                       <h2>
