--- a/country/en/mauritanieen.html
+++ b/country/en/mauritanieen.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -41,8 +41,8 @@
                 <a class="navbar-brand" href="#">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="../../homefr.html">HOME</a></li>
-                <li><a href="../../countryfr.html">PAYS</a></li>
+                <li><a href="../../homeen.html">HOME</a></li>
+                <li><a href="../../countryen.html">PAYS</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
