fix target blank in homefr.html contactfr.html

--- a/homefr.html
+++ b/homefr.html
@@ -140,13 +140,13 @@
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
         <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
         <a href="">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560">
+        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
@@ -156,13 +156,13 @@
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
         <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/mary269">
+        <a href="https://www.facebook.com/mary269" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/MaryJustineMtdh">
+        <a href="https://twitter.com/MaryJustineMtdh" target="blank">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank"">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
@@ -188,13 +188,13 @@
         <img class="portrait" src="img/teampict/auriane.jpg" alt="Auriane Goullard" />
         <h3>Auriane Goullard</h3>
         <p>Conseil e-business</p>
-        <a href="https://www.facebook.com/auriane.goullard">
+        <a href="https://www.facebook.com/auriane.goullard target="blank"">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
         <a href="">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/auriane-goullard-b2457095">
+        <a href="https://fr.linkedin.com/in/auriane-goullard-b2457095 target="blank"">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
@@ -220,13 +220,13 @@
         <img class="portrait" src="img/teampict/vincent.jpg" alt="Vincent Deflandre" />
         <h3>Vincent Deflandre</h3>
         <p>Développeur Junior</p>
-        <a href="https://www.facebook.com/vincent.deflandre">
+        <a href="https://www.facebook.com/vincent.deflandre" target="blank">
          <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/kiravince">
+        <a href="https://twitter.com/kiravince" target="blank">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/deflandre-vincent-57a050118/fr">
+        <a href="https://fr.linkedin.com/in/deflandre-vincent-57a050118/fr" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
@@ -236,13 +236,13 @@
         <img class="portrait" src="img/teampict/francois.jpg" alt="François Deféver" />
         <h3>François Deféver</h3>
         <p>Développeur Junior</p>
-        <a href="https://www.facebook.com/Francois.Fan.Defever">
+        <a href="https://www.facebook.com/Francois.Fan.Defever" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/FD_NDPC">
+        <a href="https://twitter.com/FD_NDPC" target="blank">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/francoisdefever">
+        <a href="https://fr.linkedin.com/in/francoisdefever" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
     </div>
