--- a/contact.html
+++ b/contact.html
@@ -65,13 +65,13 @@
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
         <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
         <a href="">
-        <i class="fa fa-twitter-square fa-3x"></i></i>
+        <i class="fa fa-twitter-square fa-3x" target="blank"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560">
+        <a href="https://fr.linkedin.com/in/sandrine-naguertiga-47a59560" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
@@ -81,13 +81,13 @@
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
         <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/mary269">
+        <a href="https://www.facebook.com/mary269" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
-        <a href="https://twitter.com/MaryJustineMtdh">
+        <a href="https://twitter.com/MaryJustineMtdh" target="blank">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://www.facebook.com/sandrine.naguertiga">
+        <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
