add togoen and togofr for page country

--- a/countryfr.html
+++ b/countryfr.html
@@ -105,6 +105,9 @@
                     <div class="col-md-6">
                         <a href="country/fr/beninfr.html">Benin</a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="country/fr/togofr.html">Togo</a>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <h2>
@@ -114,7 +117,7 @@
                         <a href="country/fr/nigeriafr.html">Nigéria</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/fr/kenyafr.html">kenya</a>
+                        <a href="country/fr/kenyafr.html">Kenya</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/fr/tanzaniefr.html">Tanzanie</a>
