--- a/countryen.html
+++ b/countryen.html
@@ -105,6 +105,9 @@
                     <div class="col-md-6">
                         <a href="country/en/beninen.html">Benin</a>
                     </div>
+                    <div class="col-md-6">
+                        <a href="country/en/togoen.html">Togo</a>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <h2>
@@ -114,7 +117,7 @@
                         <a href="country/en/nigeriaen.html">Nigéria</a>
                     </div>
                     <div class="col-md-6">
-                        <a href="country/en/kenyaen.html">kenya</a>
+                        <a href="country/en/kenyaen.html">Kenya</a>
                     </div>
                     <div class="col-md-6">
                         <a href="country/en/tanzanieen.html">Tanzanie</a>
