create contacten.html | fix text in contactfr & en

--- a/contacten.html
+++ b/contacten.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="fr">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -54,8 +54,7 @@
     <div class="jumbotron text-justify">
          <div class="container">
         <h2>CONTACT</h2>
-        <p>
-            Contactez nous pour plus d'informations!
+        <p>Contact us for more informations!
         </p>
 
         <div class="row text-center">
@@ -64,7 +63,7 @@
       <div class=" col-md-offset-2 col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/sandrine.jpg" alt="Sandrine NAGUERTIGA" />
         <h3>Sandrine NAGUERTIGA</h3>
-        <p>Porteur de Projet</p>
+        <p>Project leader</p>
         <a href="https://www.facebook.com/sandrine.naguertiga" target="blank">
         <i class="fa fa-facebook-square fa-3x"></i>
         </a>
@@ -80,7 +79,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 text-center">
         <img class="portrait" src="img/teampict/justine.jpg" alt="Justine MOURTADHOI" />
         <h3>Justine MOURTADHOI</h3>
-        <p>Porteur de Projet</p>
+        <p>Project leader</p>
         <a href="https://www.facebook.com/mary269" target="blank">
           <i class="fa fa-facebook-square fa-3x"></i>
         </a>
