--- a/homefr.html
+++ b/homefr.html
@@ -162,7 +162,7 @@
         <a href="https://twitter.com/MaryJustineMtdh" target="blank">
         <i class="fa fa-twitter-square fa-3x"></i></i>
         </a>
-        <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank"">
+        <a href="https://fr.linkedin.com/in/jmourtadhoi" target="blank">
         <i class="fa fa-linkedin-square fa-3x"></i>
         </a>
       </div>
