add link redict portrait and css

--- a/countryfr.html
+++ b/countryfr.html
@@ -44,7 +44,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="homefr.html">HOME</a></li>
                     <li><a href="countryfr.html">PAYS</a></li>
-                    <li><a href="#">PORTRAITS</a></li>
+                    <li><a href="portraitfr.html">PORTRAITS</a></li>
                     <li><a href="#">BLOG</a></li>
                     <li><a href="contactfr.html">CONTACT</a></li>
                 </ul>
