--- a/countryen.html
+++ b/countryen.html
@@ -44,7 +44,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="homeen.html">HOME</a></li>
                     <li><a href="countryen.html">PAYS</a></li>
-                    <li><a href="#">PORTRAITS</a></li>
+                    <li><a href="portraiten.html">PORTRAITS</a></li>
                     <li><a href="#">BLOG</a></li>
                     <li><a href="contacten.html">CONTACT</a></li>
                 </ul>
