--- a/portraitfr.html
+++ b/portraitfr.html
@@ -50,6 +50,16 @@
         </div>
     </nav>
 
+    <div class="portrait">
+        <div class="row">
+            <div class="container">
+
+                <h1>QUI SONT-ILS ?</h1>
+
+            </div>
+        </div>
+    </div>
+
     <footer>
         <div class="row">
             <div class="container">
