fix orga taita-ngetchi.html

--- a/portrait/taita-ngetich.html
+++ b/portrait/taita-ngetich.html
@@ -50,17 +50,18 @@
         </div>
     </nav>
 
-<div class="container col-md-6">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mbkSjJTye7M?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-</div>
-
     <div class="jumbotron text-justify">
-         <div class="container">
+        <div class="row">
+        <div class="container col-md-6">
+        <iframe width="720" height="480" src="https://www.youtube.com/embed/mbkSjJTye7M?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+        </div>
+         <div class="container col-md-5 col-md-offset-1">
         <h2>LE PROJET</h2>
         <p>
             Je suis partie du constat que l’Afrique à la population la plus jeune du monde et que cette tendance va probablement s’accroitre dans les prochaines années. D’un autre côté, le continent fait face à de nombreux challenges sociaux-­‐économiques. Or, des solutions pereines et viables existent. Elles sont portées par des personnes que l’on appelle des enrepreneurs sociaux. Je pars alors en Octobre 2015 à la rencontre d’une vingtaine d’entrepreneurs. J’explore 8 pays (Comores, Madagascar, Kenya, Rwanda, Tanzanie, Ouganda, Iles de la Réunion et Maurice,) en 10 semaines dans le but d’identifier leurs besoins et trouver des solutions viables et efficaces à long terme.
         </p>
-    </div>
+        </div>
+        </div>
     </div>
 
 
