fix Project in homeen & homefr

--- a/homeen.html
+++ b/homeen.html
@@ -116,7 +116,18 @@
          <div class="container">
         <h2>LE PROJET</h2>
         <p>
-            Je suis partie du constat que l’Afrique à la population la plus jeune du monde et que cette tendance va probablement s’accroitre dans les prochaines années. D’un autre côté, le continent fait face à de nombreux challenges sociaux-­‐économiques. Or, des solutions pereines et viables existent. Elles sont portées par des personnes que l’on appelle des enrepreneurs sociaux. Je pars alors en Octobre 2015 à la rencontre d’une vingtaine d’entrepreneurs. J’explore 8 pays (Comores, Madagascar, Kenya, Rwanda, Tanzanie, Ouganda, Iles de la Réunion et Maurice,) en 10 semaines dans le but d’identifier leurs besoins et trouver des solutions viables et efficaces à long terme.
+            Further to different trips in Africa, especially Eastern Africa, the following analysis has been observed:</br></br>
+
+-Young Africans are the main category in the population impacted by unemployment due to a saturated public and a poor private sector.</br></br>
+-Local people realise that the government is not involved enough in solving economical and social problems.</br></br>
+-Increase of  NICT
+-As a consequence the number of social businessmen increases. Their goal is to meet the local population’s needs.</br></br>
+-However it is obvious that social businessmen are not easily visible and guided enough.</br></br>
+-Through YES Tour Africa, we want to:
+
+    Inform : share individuals’ experiences, information and advice about social business.
+    Inspire: focus on social businessmen who innovate and dare launching new projects in Africa to meet social and economical problems around them. We want these businessmen to be seen as references by young Africans.
+     Interlink: allow both continents (African and European) to share their know-how and benefit from social businessmen’s experience.
         </p>
     </div>
     </div>
