--- a/homefr.html
+++ b/homefr.html
@@ -116,7 +116,7 @@
          <div class="container">
         <h2>LE PROJET</h2>
         <p>
-            A la suite de voyages effectués dans différents pays d’Afrique de l’Est notamment, il ressort que :</br>
+            A la suite de voyages effectués dans différents pays d’Afrique de l’Est notamment, il ressort que :</br></br>
 -les jeunes sont la catégorie la plus exposée au chomage en raison  d’un secteur public engorgé et un secteur privé assez peu développé.</br></br>
 -La population prend conscience du manque d’implication des pouvoirs publics dans la gestion des difficultés économiques et sociales.</br></br>
 -Fort développement des NTIC</br></br>
